--- a/index.html
+++ b/index.html
@@ -8,65 +8,91 @@
 </head>
 <body>
 <center>
-<font class="title">6502asm.com</font> <font class="version">v1.5</font><br/>
-<font class="reloaded">RELOADED .::</font>
+<font class="title">6502asm.com</font> <font class="version">v1.2</font>
+<font class="title">- World's first fantasy console!</font>
+<br />
+<font class="subtitle">6502 compatible assembler and emulator in javascript</font>
 
 
-<table><tr>
-<td width="50px" valign="top">
+
+<br />
+<br />
+
+
 <input type="button" value="Compile" id="compileButton" onClick="compileCode();" />
 <input type="button" value="Run" id="runButton" onClick="runBinary();" />
 <input type="button" value="Reset" id="resetButton" onClick="reset();" />
-<input type="button" value="Hexdump" id="hexdumpButton" onClick="hexdump();" />
+
+<select id="fileSelect" onChange="Load(this.options[this.selectedIndex].value)">
+  <option>Examples</option>
+  <option value="adventure.asm"">adventure.asm</option>
+  <option value="alive.asm"">alive.asm</option>
+  <option value="backandforth.asm"">backandforth.asm</option>
+  <option value="byterun.asm"">byterun.asm</option>
+  <option value="calculator.asm"">calculator.asm</option>
+  <option value="colors.asm"">colors.asm</option>
+  <option value="compo-May07-1st.asm"">compo-May07-1st.asm</option>
+  <option value="compo-May07-2nd.asm"">compo-May07-2nd.asm</option>
+  <option value="compo-May07-3rd.asm"">compo-May07-3rd.asm</option>
+  <option value="demoscene.asm"">demoscene.asm</option>
+  <option value="disco.asm"">disco.asm</option>
+  <option value="fullscreenlogo.asm"">fullscreenlogo.asm</option>
+  <option value="gameoflife.asm"">gameoflife.asm</option>
+  <option value="noise.asm"">noise.asm</option>
+  <option value="random.asm"">random.asm</option>
+  <option value="rle.asm"">rle.asm</option>
+  <option value="rorshach.asm"">rorshach.asm</option>
+  <option value="screenpatterns.asm"">screenpatterns.asm</option>
+  <option value="selfmodify.asm"">selfmodify.asm</option>
+  <option value="sierpinski.asm"">sierpinski.asm</option>
+  <option value="skier.asm"">skier.asm</option>
+  <option value="softsprites.asm"">softsprites.asm</option>
+  <option value="spacer.asm"">spacer.asm</option>
+  <option value="splashscreen.asm"">splashscreen.asm</option>
+  <option value="starfield2d.asm"">starfield2d.asm</option>
+  <option value="triangles.asm"">triangles.asm</option>
+  <option value="zookeeper.asm"">zookeeper.asm</option>
+</select>
+
 <!--
 <input type="button" value="Submit" id="submitCode" onClick="submitCode();" />
 -->
 <!--
-Forum disabled due to extreme amounts of spam
+Yes, the forum is gone. You can thank the excessive spammers for that.
 <input type="button" value="Forum" id="forumButton" onClick="window.open('/chat/', 'forum', '' );" />
 -->
-<input type="button" value="Help" id="helpButton" onClick="window.open('/help.html', 'helpwin', 'width=512,height=320,resizable=yes,scrollbars=yes,toolbar=no,location=no,menubar=no,status=no' );" />
-<select id="fileSelect" onChange="Load(this.options[this.selectedIndex].value)">
-  <option>Examples</option>
-  <option>alive.asm</option>
-  <option>byterun.asm</option>
-  <option>colors.asm</option>
-  <option>demoscene.asm</option>
-  <option>disco.asm</option>
-  <option>fullscreenlogo.asm</option>
-  <option>gameoflife.asm</option>
-  <option>random.asm</option>
-  <option>spacer.asm</option>
-  <option>starfield2d.asm</option>
-</select>
+<input type="button" value="Help" id="helpButton" onClick="window.open('help.html', 'helpwin', 'width=512,height=320,resizable=yes,scrollbars=yes,toolbar=no,location=no,menubar=no,status=no' );" />
+</center>
 
-</td>
-<td>
 <table align="center">
 <tr>
   <td valign="top">
+    <div class="cursor" id="cursor">&nbsp;</div>
     <textarea class="code" id="code" onKeyPress="disableButtons();"></textarea>
   </td>
   <td valign="top">
-    <div class="screen" id="screen"></div>
-   <div class="dbugWin">
-    <input type="checkbox" id="watch" onClick="toggleDebug();" /><font class="version">Real-time debug</font><br />
-    <div class="minidebugger" id="md">
-      <br />
-      A=$00 X=$00 Y=$00<br />
-      P=$00 SP=$0000 PC=$0000<br />
-    </div>
-    <input type="button" value="Step" id="stepButton" onClick="debugExec();"/>
-    <input type="button" value="Jump to.." id="gotoButton" onClick="gotoAddr();"/>
-   </div>
+    <div class="cursor" id="cursor">&nbsp;</div>
+    <div class="screen" id="screen" />
   </td>
 </tr>
+
+
 </table>
-</td>
-</tr></table>
-<div class="messages" id="messages"></div>
+
+<center>
+<div class="messages" id="messages">
+</div>
+<br />
+
 <script type="text/javascript" src="assembler.js"></script>
+
+
+<center>
+
+<a href="/beta/note.html">Betatest v1.5?</a>
+<br />
+
+</center>
 
 </body>
 </html>
-
